Skip third-person shooters in data extraction for now. Update TODO.

--- a/TODO
+++ b/TODO
@@ -1,2 +1,2 @@
-Try easier genres that are more distinguishable? 
+1. Trying to train the model between easier genres now. Next step is to get a few more strategy game videos, for testing the model on unseen new games.
 
